<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <LinearLayout
         android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/enter_password"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:passwordToggleTint="@color/black"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"


            >
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp"
                android:lines="1"
                android:background="@drawable/rounded_white"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:textColorHint="@color/gray4"
                android:inputType="textPassword"


                />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="3"

            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="3dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="3dp"


                >
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>
</layout>
